--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI= mongodb+srv://anantabhsah:@cluster1000.ecrxewn.mongodb.net/?retryWrites=true&w=majority
-RPC_KEY= https://polygon_mumbai.g.alchemy.com/v2/wemvdcfY-KTd3DKF8
+MONGO_URI= 
+RPC_KEY
 PRIV_KEY=
